// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Input default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #E4E5ED;
  border-color: #00BF8E;
}

.c2 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c3 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c3::-webkit-input-placeholder {
  color: #9194A7;
}

.c3::-moz-placeholder {
  color: #9194A7;
}

.c3:-ms-input-placeholder {
  color: #9194A7;
}

.c3::placeholder {
  color: #9194A7;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value=""
      />
      <label
        className="fa-text-gray-01 fa-text-sm c4"
        disabled={false}
      >
        Empty
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #7d7d7d;
  border-radius: 4px;
  color: #7d7d7d;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #7d7d7d;
  border-color: #7d7d7d;
}

.c2 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c3 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #7d7d7d;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c3::-webkit-input-placeholder {
  color: #9194A7;
}

.c3::-moz-placeholder {
  color: #9194A7;
}

.c3:-ms-input-placeholder {
  color: #9194A7;
}

.c3::placeholder {
  color: #9194A7;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={true}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        value=""
      />
      <label
        className="fa-text-gray-01 fa-text-sm c4"
        disabled={true}
      >
        Text goes here
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input error 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E84545;
  border-radius: 4px;
  color: #E84545;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #131336;
  border-color: #E84545;
}

.c2 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c3 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c3::-webkit-input-placeholder {
  color: #9194A7;
}

.c3::-moz-placeholder {
  color: #9194A7;
}

.c3:-ms-input-placeholder {
  color: #9194A7;
}

.c3::placeholder {
  color: #9194A7;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value="Some text"
      />
      <label
        className="fa-text-gray-01 fa-text-sm c4"
        disabled={false}
      >
        Text goes here
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input with value 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #E4E5ED;
  border-color: #00BF8E;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c3 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c3::-webkit-input-placeholder {
  color: #9194A7;
}

.c3::-moz-placeholder {
  color: #9194A7;
}

.c3:-ms-input-placeholder {
  color: #9194A7;
}

.c3::placeholder {
  color: #9194A7;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value="Example text"
      />
      <label
        className="fa-text-gray-01 fa-text-sm c4"
        disabled={false}
      >
        Text goes here
      </label>
    </div>
    <span
      className="c5"
    >
      <div>
        Content right
      </div>
    </span>
  </div>
  <div
    className="c6"
  />
</div>
`;
